# tempify

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  REFERENCES.bib  SECURITY.md  _methodology_kit.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: impl.md  review.md  spec-design.md  spec-init.md  spec-tasks.md
.claude/hooks/: post-task.sh  pre-commit.sh  pre-task.sh
.claude/state/: README.md
_methodology_sources/: MANIFEST.md
_methodology_sources/adr/: 0001-use-xarray-as-central-abstraction.md  0002-dask-vs-multiprocessing.md  0004-precipitation-policy.md  0010-mean-preservation-tolerance.md  0016-climatological-wraparound.md  0018-classical-interpolator-catalog.md
_methodology_sources/code/: constants.py  datasets.py
_methodology_sources/examples/: bench_max_diff.py  regenerate_maipo_monthly_grid.py  regenerate_maipo_timeseries.py  run_demo.py
_methodology_sources/project_meta/: REFERENCES.bib  precipitation.md
_methodology_sources/steering/: architecture.md  tech.md
docs/: index.html
docs/adr/: 0003-typer-vs-click-vs-argparse.md  0005-pyside6-as-gui-framework.md  0006-pyinstaller-inno-setup-packaging.md  0007-reproducibility-policy.md  0008-confidence-scoring-and-detection-result-contract.md  0009-geospatial-coherence-tolerances.md  0014-tempifypipeline-naming-correction.md  0015-monthly-value-temporal-placement.md  0017-neural-interpolator-extensibility.md
docs/schemas/: detection-result.schema.md  processing-report.schema.md  validation-report.schema.md  variable-profile.schema.yaml
docs/tutorials/: 01-getting-started.ipynb  02-real-worldclim-maipo.ipynb  03-ergonomic-api.ipynb
examples/: README.md  generate_worldclim_sample.py  regenerate_maipo_monthly_grid.py
specs/_audit/: 2026-05-16-requirements-audit.md  2026-05-17-security-audit.md
specs/_template/: README.md  design.md  impl-log.md  requirements.md  tasks.md
specs/cli/: design.md  requirements.md  tasks.md
specs/core-interpolation/: design.md  requirements.md  tasks.md
specs/documentation/: requirements.md
specs/ergonomic-api/: design.md  requirements.md  tasks.md
specs/gui/: design.md  requirements.md  tasks.md
specs/io-handlers/: design.md  requirements.md  tasks.md
specs/packaging/: design.md  requirements.md  tasks.md
specs/pipeline/: design.md  requirements.md  tasks.md
specs/security/: requirements.md
specs/structure-detection/: design.md  requirements.md  tasks.md
specs/temporal-frequency-resolver/: design.md  requirements.md  tasks.md
specs/validation/: design.md  requirements.md  tasks.md
src/tempify/: __init__.py  api.py  plotting.py  utils.py
steering/: architecture.md  conventions.md  harness.md  product.md
tests/unit/: test_api.py  (+4 more)
(+91 files in other folders)
