[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempify"
version = "0.1.3"
description = "Temporal densification for geospatial raster stacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Guillermo Fuentes-Jaque", email = "guillermo@icta.cl" }
]
maintainers = [
    { name = "ICTA Ltda.", email = "contacto@icta.cl" }
]
keywords = ["geospatial", "raster", "temporal", "densification", "interpolation", "climate", "worldclim", "xarray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "dask[array]>=2024.1",
    "rioxarray>=0.15",
    "netcdf4>=1.6",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "jupyter",
    "matplotlib",
]
zarr = ["zarr>=2.17"]

[project.scripts]
tempify = "tempify.cli:app"

[project.urls]
Homepage = "https://github.com/djwillichile/tempify"
Documentation = "https://tempify.readthedocs.io"
Repository = "https://github.com/djwillichile/tempify"
Issues = "https://github.com/djwillichile/tempify/issues"
Organization = "https://icta.cl"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take more than 5 seconds",
    "integration: end-to-end integration tests",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src/tempify"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
